Bug 827053 - Add support for winding in fill + clip + isPointInPath + tests the feature. r=bas